Fixing background attachment

--- a/Sami/Resources/themes/default/css/sami.css
+++ b/Sami/Resources/themes/default/css/sami.css
@@ -85,6 +85,7 @@ html, body, #content {
     background-size: 100% 56px;
     overflow: auto;
     height: 100%;
+    background-attachment: local;
 }
 
 #api-tree ul {
