--- a/Sami/Resources/themes/default/sami.js.twig
+++ b/Sami/Resources/themes/default/sami.js.twig
@@ -1,5 +1,9 @@
 {% from _self import element %}
 
+{% block project_version %}
+window.projectVersion = '{{ project.version }}';
+{% endblock %}
+
 (function(root) {
 
     var bhIndex = null;
