--- a/Sami/Resources/themes/default/search.twig
+++ b/Sami/Resources/themes/default/search.twig
@@ -11,8 +11,8 @@
 
     <p>This page allows you to search through the API documentation for
     specific terms. Enter your search words into the box below and click
-    "submit". The search will be performed on namespaces, clases, interfaces,
-    traits, functions, and methods.</p>
+    "submit". The search will be performed on namespaces, classes, interfaces,
+    traits, functions and methods.</p>
 
     <form class="form-inline" role="form" action="{{ path('search.html') }}" method="GET">
         <div class="form-group">
