--- a/Sami/Resources/themes/default/css/sami.css
+++ b/Sami/Resources/themes/default/css/sami.css
@@ -239,6 +239,28 @@ a abbr {
     cursor: pointer;
 }
 
+.method-description table {
+    border: solid 1px #ccc;
+    padding: 1em;
+    margin: 1em;
+}
+
+.method-description td, .method-description th {
+    padding: 0.75em 1.25em;
+}
+
+.method-description tbody tr:nth-child(even) {
+    background: #edf3fe;
+}
+
+.method-description tbody tr:nth-child(odd) {
+    background: #fff;
+}
+
+.method-description thead tr {
+    background: #edf3fe;
+}
+
 /** General Sami styling **/
 
 .underlined > .row {
