feature #283 Make namespace copyable
Remove css ::before selector and add li elements with backslashes to make
the breadcrumb copyable.

--- a/Sami/Resources/themes/default/class.twig
+++ b/Sami/Resources/themes/default/class.twig
@@ -9,7 +9,7 @@
         <div class="namespace-breadcrumbs">
             <ol class="breadcrumb">
                 <li><span class="label label-default">{{ class.categoryName|raw }}</span></li>
-                {{ breadcrumbs(class.namespace) }}
+                {{ breadcrumbs(class.namespace) -}}
                 <li>{{ class.shortname|raw }}</li>
             </ol>
         </div>
